update pdf and fix header on mobile and change background color on desktop

--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -7,7 +7,7 @@ $body-weight: 400;
 $strong-weight: 700;
 $header-weight: 700;
 $monospace-font: "Source Code Pro", monospace;
-$background-color: #eee;
+$background-color: #ccc;
 $resume-color: #f8f8f8;
 $header-color: $resume-color;
 $line-color: #aaa;
